@@ -60,6 +60,7 @@ require 'document_pdf_renderer_main_tests.php';
 require 'document_pdf_renderer_footer_part_tests.php';
 require 'document_pdf_style_inference_tests.php';
 require 'document_pdf_renderer_mediaobject_tests.php';
+require 'document_pdf_tests.php';
 
 require 'converter_docbook_html_test.php';
 require 'converter_docbook_html_xsl_test.php';
@@ -122,6 +123,7 @@ class ezcDocumentSuite extends PHPUnit_Framework_TestSuite
         $this->addTest( ezcDocumentPdfRendererFooterPartTests::suite() );
         $this->addTest( ezcDocumentPdfStyleInferenceTests::suite() );
         $this->addTest( ezcDocumentPdfMediaObjectRendererTests::suite() );
+        $this->addTest( ezcDocumentPdfTests::suite() );
 
         $this->addTest( ezcDocumentConverterDocbookToHtmlTests::suite() );
         $this->addTest( ezcDocumentConverterDocbookToHtmlXsltTests::suite() );
